--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ matrix:
 script:
   - dotnet restore
   - dotnet build
-  - cd UnitTestProject1 && dotnet test -verbose && cd ../
+  - cd UnitTestProject1 && dotnet test && cd ../
