--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ matrix:
       sudo: required
       mono: none
       dotnet: 1.0.1
+    - os: osx
+      osx_image: xcode7.2
+      mono: none
+      dotnet: 1.0.1
 
 script:
   - dotnet restore
