Allow GtkApp to use ClassLibrary1 (class library project shared between other projects in this solution)

--- a/GtkApp/GtkApp.csproj
+++ b/GtkApp/GtkApp.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="GtkSharp" Version="3.22.24.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
+  </ItemGroup>
+
 </Project>
